crates/inkgen-core/src/ir/snapshots/inkgen_core__ir__tests__snapshot_tests__observation_ir_serialization.snap
---
source: crates/inkgen-core/src/ir/tests.rs
expression: json
---
{
  "version": "0.1.0",
  "resource": {
    "metadata": {
      "name": "Observation",
      "description": "Measurements and simple assertions made about a patient, device or other subject",
      "kind": "Resource",
      "base_definition": "http://hl7.org/fhir/StructureDefinition/DomainResource",
      "derivation": "Specialization"
    },
    "elements": {
      "root": {
        "path": "Observation",
        "definition": {
          "min": 0,
          "max": "1",
          "types": [
            {
              "code": "Observation",
              "profile": null,
              "target_profile": null
            }
          ],
          "must_support": false,
          "short": "Measurements and simple assertions",
          "definition": "Measurements and simple assertions made about a patient, device or other subject.",
          "comment": null
        },
        "children": [],
        "slicing": null
      },
      "elements": {
        "Observation": {
          "path": "Observation",
          "definition": {
            "min": 0,
            "max": "1",
            "types": [
              {
                "code": "Observation",
                "profile": null,
                "target_profile": null
              }
            ],
            "must_support": false,
            "short": "Measurements and simple assertions",
            "definition": "Measurements and simple assertions made about a patient, device or other subject.",
            "comment": null
          },
          "children": [
            "Observation.status",
            "Observation.code"
          ],
          "slicing": null
        },
        "Observation.status": {
          "path": "Observation.status",
          "definition": {
            "min": 1,
            "max": "1",
            "types": [
              {
                "code": "code",
                "profile": null,
                "target_profile": null
              }
            ],
            "must_support": true,
            "short": "registered | preliminary | final | amended +",
            "definition": "The status of the result value.",
            "comment": null
          },
          "children": [],
          "slicing": null
        },
        "Observation.code": {
          "path": "Observation.code",
          "definition": {
            "min": 1,
            "max": "1",
            "types": [
              {
                "code": "CodeableConcept",
                "profile": null,
                "target_profile": null
              }
            ],
            "must_support": true,
            "short": "Type of observation (code / type)",
            "definition": "Describes what was observed. Sometimes this is called the observation \"name\".",
            "comment": null
          },
          "children": [],
          "slicing": null
        }
      }
    },
    "bindings": [
      {
        "path": "Observation.status",
        "value_set": "http://hl7.org/fhir/ValueSet/observation-status",
        "strength": "Required",
        "description": null
      },
      {
        "path": "Observation.code",
        "value_set": "http://hl7.org/fhir/ValueSet/observation-codes",
        "strength": "Example",
        "description": null
      }
    ],
    "invariants": [
      {
        "key": "obs-6",
        "severity": "Error",
        "human": "dataAbsentReason SHALL only be present if Observation.value[x] is not present",
        "expression": "dataAbsentReason.empty() or value.empty()",
        "xpath": null
      }
    ]
  }
}
